# CROWDio-SDK

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
crowdio/: __init__.py  api.py  decorators.py
crowdio/image_utils/: __init__.py
crowdio_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
developer_sdk/: api.py  namespace.py
example/: monte_carlo_euler_client.py  pipeline_image_processing.py
